--- a/index.html
+++ b/index.html
@@ -8,22 +8,16 @@
     <link rel="stylesheet" href="./styles/styles.css" />
 </head>
 
+<a href=”Ambiguous-Wanderings/minimalist-site/minimalist.html”>Minimalist Site</a>
 <body id="body">
     <section class="head-section" id="head-box">
         <div class="head-text-wrapper" id="head-wrap-text">
             <h1 class="wrapper" id="split-head">
-                <div class="top">Ambiguous</div>
-                <div class="bottom" aria-hidden="true">Ambiguous</div>
+                <div class="top">Minimalist Site</div>
+                <div class="bottom" aria-hidden="true">Minimalist Site</div>
             </h1>
     </section>
-    <section class="head-section" id="head-box">
-        <div class="head-text-wrapper" id="head-wrap-text">
-            <h1 class="wrapper" id="split-head">
-                <div class="top">Wanderings</div>
-                <div class="bottom" aria-hidden="true">Wanderings</div>
-            </h1>
-    </section>
-
+ 
 
 
 
