--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./styles/styles.css" />
 </head>
 
-<a href=”Ambiguous-Wanderings/minimalist-site/minimalist.html”>Minimalist Site</a>
+<a href=”http://127.0.0.1:5500/minimalist.html”>Minimalist Site</a>
+
 <body id="body">
     <section class="head-section" id="head-box">
         <div class="head-text-wrapper" id="head-wrap-text">
