--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/styles.css" />
 </head>
 
-<a href=”http://127.0.0.1:5500/minimalist.html”>Minimalist Site</a>
+<a href=”minimalist”>Minimalist Site</a>
 
 <body id="body">
     <section class="head-section" id="head-box">
